--- a/code/src/Makefile
+++ b/code/src/Makefile
@@ -1,18 +1,21 @@
-CC=gcc
-CFLAGS=-Wall
+CC=g++
+CFLAGS=
 EXEC=exec
-OBJ=main
+SRC= $(wildcard *.cpp)
+OBJ= $(SRC:.cpp=.o)
 
 all: $(EXEC)
+
+$(EXEC): $(OBJ)
+	$(CC) -o $@ $^
 
 %.o: %.cpp
 	$(CC) $(CFLAGS) -o $@ -c $<
 
-$(EXEC): main.o Call.o
-	$(CC) -o $@ $< 
+.PHONY: clean mrproper
 
 clean:
-	rm -rf *.o
+	@rm -rf *.o
 
 mrproper: clean
-	rm -rf $(EXEC)
+	@rm -rf $(EXEC)
